# SilkCast

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  NOTICE  README.md
client/: silkcast_client.py
clients/python/: silkcast_client.py
docs/: h264_pull_client.md  pull_client.md
packaging/systemd/: silkcast.service
scripts/: build_linux.sh  fetch_openh264_binary.sh  launch_desktop.sh
src/: api_router.hpp  capture_avfoundation.mm  capture_v4l2.cpp  capture_v4l2.hpp  client_pull.cpp  client_pull.hpp  encoder_h264.cpp  encoder_h264.hpp  index.html  index_html.hpp  main.cpp  mp4_frag.cpp  mp4_frag.hpp  session_manager.cpp  session_manager.hpp  stream_utils.cpp  stream_utils.hpp  types.hpp  yuv_convert.hpp
